added dark mode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/style.css">
+
+  <script src="assets/js/theme.js"></script>
 </head>
 <body>
   <h1>Hello world!</h1>
