--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/login.css">
+
+  <script src="assets/js/theme.js"></script>
 </head>
 <body>
   <main class="login-column">
