added theme toggle switch

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/login.css">
+  <link rel="stylesheet" href="assets/css/toggle-switch.css">
 
   <script src="assets/js/theme.js"></script>
 </head>
@@ -33,6 +34,15 @@
           <button class="btn btn-primary btn-block" type="submit">LOG IN</button>
         </div>
       </form>
+    </div>
+
+    <div class="h-center" style="margin: 0.6rem 0;">
+      <div class="toggle-switch">
+        <label>
+          <input id="theme-toggler" type="checkbox">
+          <span class="slider"></span>
+        </label>
+      </div>
     </div>
   </main>
 </body>
