layout dan sidebar

--- a/index.html
+++ b/index.html
@@ -9,10 +9,47 @@
 
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/dashboard.css">
+  <link rel="stylesheet" href="assets/css/toggle-switch.css">
 
   <script src="assets/js/theme.js"></script>
+  <script src="assets/js/sidebar.js"></script>
 </head>
 <body>
-  <h1>Hello world!</h1>
+
+  <nav class="top-nav">
+    <!-- Sidebar toggler -->
+    <div class="btn-icon" onclick="toggleSidebar()">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+    </div>
+
+    <!-- Theme toggler and profile -->
+    <div>
+
+    </div>
+  </nav>
+
+  <main class="main">
+    <nav id="sidebar" class="sidebar">
+      <div class="sidebar-content">
+        <script>
+          for (let i = 0; i < 10; i++) {
+            document.write('<p>lorem ipsum...</p>');
+          }
+        </script>
+      </div>
+    </nav>
+    <div class="content">
+      <script>
+        for (let i = 0; i < 50; i++) {
+          document.write('<p>lorem ipsum...</p>');
+        }
+      </script>
+    </div>
+  </main>
+
+
 </body>
 </html>
