--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
       </div>
 
       <div class="dropdown">
-        <div class="btn-icon">
+        <div class="btn-icon" onclick="event.target.parentElement.classList.toggle('open')">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
           </svg>
         </div>
+        <ul>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
       </div>
 
     </div>
