--- a/index.html
+++ b/index.html
@@ -53,19 +53,49 @@
   <main class="main">
     <nav id="sidebar" class="sidebar">
       <div class="sidebar-content">
-        <script>
-          for (let i = 0; i < 10; i++) {
-            document.write('<p>lorem ipsum...</p>');
-          }
-        </script>
+
+        <div class="md:hidden close-div">
+          <div onclick="toggleSidebar()" class="btn-icon" style="margin: 0.2rem 0.5rem;">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </div>
+        </div>
+
+        <a href="#" class="btn menu">
+          <img src="assets/svg/bps.svg" class="icon">
+          <span>SI-NGADU</span>
+        </a>
+
+        <hr>
+
+        <a href="#" class="btn menu">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+          </svg>
+          <span>Form Laporan</span>
+        </a>
+        <a href="#" class="btn menu">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
+          </svg>
+          <span>Daftar Laporan</span>
+        </a>
+        <a href="#" class="btn menu">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 002.625.372 9.337 9.337 0 004.121-.952 4.125 4.125 0 00-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 018.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0111.964-3.07M12 6.375a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zm8.25 2.25a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z" />
+          </svg>
+          <span>Manajemen User</span>
+        </a>
+
       </div>
     </nav>
     <div class="content">
-      <script>
-        for (let i = 0; i < 50; i++) {
-          document.write('<p>lorem ipsum...</p>');
-        }
-      </script>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent maximus nibh id viverra rutrum. Quisque pharetra enim ipsum, vel blandit lorem ornare nec. Nullam molestie maximus dui, sit amet aliquet velit. Pellentesque ac metus neque. Vivamus pulvinar mollis est. Cras dignissim venenatis euismod. Ut varius nisl mi. Mauris lobortis non tellus aliquam iaculis.</p>
+
+      <p>Nunc interdum augue metus. In luctus mi ut lectus pharetra interdum. Sed cursus, tellus et tempus accumsan, sem quam fringilla mauris, nec efficitur tortor ipsum sit amet augue. Etiam feugiat eu libero quis euismod. Fusce quis sapien vulputate odio vestibulum viverra eu a odio. Nunc est erat, blandit sed fermentum id, ultricies ac risus. Nulla neque dolor, condimentum sit amet pretium non, sollicitudin ut enim. Suspendisse potenti.</p>
+
+      <p>Quisque vestibulum placerat elit. Pellentesque non metus eu dui luctus sagittis eget vel dui. Aenean fermentum neque ornare tortor venenatis rutrum. Morbi aliquet suscipit nibh, id elementum nisl vulputate vel. Mauris sed sapien pellentesque, elementum dui euismod, accumsan velit. Aliquam erat volutpat. Morbi placerat dui tellus, ut fermentum justo fermentum non. Nunc at est at augue lobortis suscipit. Etiam laoreet congue sem. Etiam finibus semper feugiat. Vivamus sit amet est elit. Morbi quam mauris, mattis non luctus id, lacinia nec nibh. In sit amet sapien magna. Aenean lectus metus, suscipit in ligula vitae, rutrum condimentum ex. Sed lacinia est ac feugiat malesuada.</p>
     </div>
   </main>
 
