ditambah form buat laporan

--- a/login.html
+++ b/login.html
@@ -23,10 +23,10 @@
       </header>
 
       <form>
-        <div class="form-div">
+        <div class="form-div big">
           <input class="form-input" type="text" name="username" placeholder="Username/Email">
         </div>
-        <div class="form-div">
+        <div class="form-div big">
           <input class="form-input" type="password" name="password" placeholder="Password">
         </div>
 
