--- a/buat-laporan.html
+++ b/buat-laporan.html
@@ -69,14 +69,14 @@
 
         <hr>
 
-        <a href="/" class="btn menu active">
+        <a href="/" class="btn menu">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
           </svg>
           <span>Dashboard</span>
         </a>
 
-        <a href="/buat-laporan.html" class="btn menu">
+        <a href="/buat-laporan.html" class="btn menu active">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
           </svg>
@@ -98,11 +98,40 @@
       </div>
     </nav>
     <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent maximus nibh id viverra rutrum. Quisque pharetra enim ipsum, vel blandit lorem ornare nec. Nullam molestie maximus dui, sit amet aliquet velit. Pellentesque ac metus neque. Vivamus pulvinar mollis est. Cras dignissim venenatis euismod. Ut varius nisl mi. Mauris lobortis non tellus aliquam iaculis.</p>
+      <h1 class="header">
+        Form Laporan
+      </h1>
 
-      <p>Nunc interdum augue metus. In luctus mi ut lectus pharetra interdum. Sed cursus, tellus et tempus accumsan, sem quam fringilla mauris, nec efficitur tortor ipsum sit amet augue. Etiam feugiat eu libero quis euismod. Fusce quis sapien vulputate odio vestibulum viverra eu a odio. Nunc est erat, blandit sed fermentum id, ultricies ac risus. Nulla neque dolor, condimentum sit amet pretium non, sollicitudin ut enim. Suspendisse potenti.</p>
+      <!--
+      <hr class="w-full" style="color: rgba(0, 0, 0, 0)">
+      -->
 
-      <p>Quisque vestibulum placerat elit. Pellentesque non metus eu dui luctus sagittis eget vel dui. Aenean fermentum neque ornare tortor venenatis rutrum. Morbi aliquet suscipit nibh, id elementum nisl vulputate vel. Mauris sed sapien pellentesque, elementum dui euismod, accumsan velit. Aliquam erat volutpat. Morbi placerat dui tellus, ut fermentum justo fermentum non. Nunc at est at augue lobortis suscipit. Etiam laoreet congue sem. Etiam finibus semper feugiat. Vivamus sit amet est elit. Morbi quam mauris, mattis non luctus id, lacinia nec nibh. In sit amet sapien magna. Aenean lectus metus, suscipit in ligula vitae, rutrum condimentum ex. Sed lacinia est ac feugiat malesuada.</p>
+      <div class="card">
+        <form>
+
+          <div class="form-group">
+            <label>Deskripsi Masalah</label>
+            <div class="form-div">
+              <textarea rows="3" class="form-input"></textarea>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label>Jenis Masalah</label>
+            <div class="form-div">
+              <select class="form-input">
+                <option>Responden tidak mau ditemui</option>
+                <option>Masalah lainnya</option>
+              </select>
+            </div>
+          </div>
+
+          <div style="margin-top: 1.5rem;">
+            <button class="btn btn-primary btn-block" type="submit">Buat Laporan</button>
+          </div>
+
+        </form>
+      </div>
     </div>
   </main>
 
