fix hyperlink dan progress daftar laporan

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <h2 class="h2">SISTEM PENGADUAN TERPADU</h2>
       </header>
 
-      <form>
+      <form action="./index.html">
         <div class="form-div big">
           <input class="form-input" type="text" name="username" placeholder="Username/Email">
         </div>
