--- a/daftar-laporan.html
+++ b/daftar-laporan.html
@@ -69,7 +69,7 @@
 
         <hr>
 
-        <a href="./index.html" class="btn menu active">
+        <a href="./index.html" class="btn menu">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
           </svg>
@@ -82,7 +82,7 @@
           </svg>
           <span>Form Laporan</span>
         </a>
-        <a href="./daftar-laporan.html" class="btn menu">
+        <a href="./daftar-laporan.html" class="btn menu active">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
           </svg>
@@ -98,11 +98,56 @@
       </div>
     </nav>
     <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent maximus nibh id viverra rutrum. Quisque pharetra enim ipsum, vel blandit lorem ornare nec. Nullam molestie maximus dui, sit amet aliquet velit. Pellentesque ac metus neque. Vivamus pulvinar mollis est. Cras dignissim venenatis euismod. Ut varius nisl mi. Mauris lobortis non tellus aliquam iaculis.</p>
+      <h1 class="header">Daftar Laporan</h1>
 
-      <p>Nunc interdum augue metus. In luctus mi ut lectus pharetra interdum. Sed cursus, tellus et tempus accumsan, sem quam fringilla mauris, nec efficitur tortor ipsum sit amet augue. Etiam feugiat eu libero quis euismod. Fusce quis sapien vulputate odio vestibulum viverra eu a odio. Nunc est erat, blandit sed fermentum id, ultricies ac risus. Nulla neque dolor, condimentum sit amet pretium non, sollicitudin ut enim. Suspendisse potenti.</p>
+      <div class="form-div" style="margin: 1.5rem 0 1rem 0;">
+        <input type="text" class="form-input" placeholder="Search...">
+      </div>
 
-      <p>Quisque vestibulum placerat elit. Pellentesque non metus eu dui luctus sagittis eget vel dui. Aenean fermentum neque ornare tortor venenatis rutrum. Morbi aliquet suscipit nibh, id elementum nisl vulputate vel. Mauris sed sapien pellentesque, elementum dui euismod, accumsan velit. Aliquam erat volutpat. Morbi placerat dui tellus, ut fermentum justo fermentum non. Nunc at est at augue lobortis suscipit. Etiam laoreet congue sem. Etiam finibus semper feugiat. Vivamus sit amet est elit. Morbi quam mauris, mattis non luctus id, lacinia nec nibh. In sit amet sapien magna. Aenean lectus metus, suscipit in ligula vitae, rutrum condimentum ex. Sed lacinia est ac feugiat malesuada.</p>
+      <div class="card" style="overflow-x: auto;">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Deskripsi</th>
+              <th>Pelapor</th>
+              <th>Status</th>
+              <th>Aksi</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
+              <td>Yanto</td>
+              <td>entah</td>
+              <td>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small primary">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                  </svg>
+                </span>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small danger">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                  </svg>
+                </span>
+              </td>
+            </tr>
+            <tr>
+              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
+              <td>Yanto</td>
+              <td>entah</td>
+              <td>aksi</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
+              <td>Yanto</td>
+              <td>entah</td>
+              <td>aksi</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
     </div>
   </main>
 
