progress daftar-laporan

--- a/daftar-laporan.html
+++ b/daftar-laporan.html
@@ -14,6 +14,7 @@
 
   <script src="assets/js/theme.js"></script>
   <script src="assets/js/sidebar.js"></script>
+  <script src="assets/js/modal.js"></script>
 </head>
 <body>
 
@@ -108,20 +109,49 @@
         <table class="table">
           <thead>
             <tr>
-              <th>Deskripsi</th>
+              <th>Jenis Masalah</th>
               <th>Pelapor</th>
               <th>Status</th>
               <th>Aksi</th>
             </tr>
           </thead>
           <tbody>
+
             <tr>
-              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
+              <td>Responden tidak mau ditemui</td>
               <td>Yanto</td>
-              <td>entah</td>
+              <td>Belum terselesaikan</td>
+              <td>
+                <span class="btn-action" onclick="openDetailModal('Lorem ipsum dolor sit amet')">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon small primary">
+                    <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 01.67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 11-.671-1.34l.041-.022zM12 9a.75.75 0 100-1.5.75.75 0 000 1.5z" clip-rule="evenodd" />
+                  </svg>
+                </span>
+                <a class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small success">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                  </svg>
+                </a>
+                <a class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small danger">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                  </svg>
+                </a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>Responden tidak mau ditemui</td>
+              <td>Yanto</td>
+              <td>Belum terselesaikan</td>
               <td>
                 <span class="btn-action">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon small primary">
+                    <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 01.67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 11-.671-1.34l.041-.022zM12 9a.75.75 0 100-1.5.75.75 0 000 1.5z" clip-rule="evenodd" />
+                  </svg>
+                </span>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small success">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                   </svg>
                 </span>
@@ -132,18 +162,30 @@
                 </span>
               </td>
             </tr>
+
             <tr>
-              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
+              <td>Responden tidak mau ditemui</td>
               <td>Yanto</td>
-              <td>entah</td>
-              <td>aksi</td>
+              <td>Terselesaikan</td>
+              <td>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon small primary">
+                    <path fill-rule="evenodd" d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 01.67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 11-.671-1.34l.041-.022zM12 9a.75.75 0 100-1.5.75.75 0 000 1.5z" clip-rule="evenodd" />
+                  </svg>
+                </span>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small success">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                  </svg>
+                </span>
+                <span class="btn-action">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small danger">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                  </svg>
+                </span>
+              </td>
             </tr>
-            <tr>
-              <td style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ipsum ullamcorper, volutpat dolor sed, sollicitudin risus. Fusce leo purus, mattis eu dolor et, aliquam semper tellus. Phasellus quam dui, viverra at sapien ut, lobortis gravida sem. Quisque diam lacus, porttitor vitae mollis id, ultricies id erat. Sed tempor dapibus sem, eu rutrum libero tempus faucibus. Vestibulum purus enim, volutpat rhoncus mauris id, eleifend sagittis arcu. Morbi sed urna in lacus sagittis elementum. Sed commodo lacus et posuere luctus.</td>
-              <td>Yanto</td>
-              <td>entah</td>
-              <td>aksi</td>
-            </tr>
+
           </tbody>
         </table>
       </div>
@@ -151,6 +193,22 @@
     </div>
   </main>
 
+  <div id="detail-modal" class="modal">
+    <div class="card">
+      <div style="display: flex; flex-direction: row; width: 100%;">
+        <h1>Detail</h1>
+
+        <div class="btn-icon" style="margin-left: auto;" onclick="this.parentElement.parentElement.parentElement.classList.remove('open')">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </div>
+      </div>
+
+      <hr style="width: 100%;">
+      <p id="detail"></p>
+    </div>
+  </div>
 
 </body>
 </html>
