remove modal made

--- a/daftar-laporan.html
+++ b/daftar-laporan.html
@@ -132,7 +132,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                   </svg>
                 </a>
-                <a class="btn-action">
+                <a class="btn-action" onclick="openDeleteModal(2)">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon small danger">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                   </svg>
@@ -195,7 +195,7 @@
 
   <div id="detail-modal" class="modal">
     <div class="card">
-      <div style="display: flex; flex-direction: row; width: 100%;">
+      <div class="card-header">
         <h1>Detail</h1>
 
         <div class="btn-icon" style="margin-left: auto;" onclick="this.parentElement.parentElement.parentElement.classList.remove('open')">
@@ -207,6 +207,41 @@
 
       <hr style="width: 100%;">
       <p id="detail"></p>
+    </div>
+  </div>
+
+  <div id="delete-modal" class="modal">
+    <div class="card">
+      <div class="card-header">
+        <h1>Hapus Laporan</h1>
+
+        <div class="btn-icon" style="margin-left: auto;" onclick="this.parentElement.parentElement.parentElement.classList.remove('open')">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </div>
+      </div>
+      <hr style="width: 100%;">
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon large danger">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z" />
+        </svg>
+
+        <h2>Hapus laporan ini?</h2>
+
+        <div style="display: flex; flex-direction: row; justify-content: center; gap: 2rem;">
+          <button class="btn btn-secondary" onclick="document.querySelector('#delete-modal').classList.remove('open')">
+            Tidak
+          </button>
+          <form>
+            <input type="hidden" id="delete-id">
+            <button class="btn btn-danger">
+              Ya
+            </button>
+          </form>
+        </div>
+
+      </div>
     </div>
   </div>
 
