done halaman manajemen user

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
       <form action="./index.html">
         <div class="form-div big">
-          <input class="form-input" type="text" name="username" placeholder="Username/Email">
+          <input class="form-input" type="text" name="email" placeholder="Email">
         </div>
         <div class="form-div big">
           <input class="form-input" type="password" name="password" placeholder="Password">
