--- a/login.html
+++ b/login.html
@@ -24,10 +24,11 @@
 
       <form action="./index.html">
         <div class="form-div big">
-          <input class="form-input" type="text" name="email" placeholder="Email">
+          <input class="form-input" type="email" name="email" placeholder="Email" required>
         </div>
+        <!-- <span class="danger text-error">Error</span> -->
         <div class="form-div big">
-          <input class="form-input" type="password" name="password" placeholder="Password">
+          <input class="form-input" type="password" name="password" placeholder="Password" required>
         </div>
 
         <div class="login-submit-btn">
