--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   <main class="login-column">
     <div class="login-card">
       <header class="login-header">
-        <img src="assets/svg/bps.svg" height="128" width="128">
+        <img src="assets/svg/bps.svg" alt="Logo BPS" height="128" width="128">
         <h2 class="h2">SISTEM PENGADUAN TERPADU</h2>
       </header>
 
