--- a/profile.html
+++ b/profile.html
@@ -137,14 +137,14 @@
           </div>
 
           <div class="form-group">
-            <label>Password Lama</label>
+            <label>Password Baru</label>
             <div class="form-div">
               <input type="password" class="form-input">
             </div>
           </div>
 
           <div class="form-group">
-            <label>Password Lama</label>
+            <label>Konfirmasi Password Baru</label>
             <div class="form-div">
               <input type="password" class="form-input">
             </div>
