--- a/edit-laporan.html
+++ b/edit-laporan.html
@@ -63,7 +63,7 @@
         </div>
 
         <a class="btn menu">
-          <img src="assets/svg/bps.svg" class="icon">
+          <img alt="logo BPS" src="assets/svg/bps.svg" class="icon">
           <span>SI-NGADU</span>
         </a>
 
